--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7431815557058960"
      crossorigin="anonymous"></script>
-
+<meta name="google-site-verification" content="sPbEjfsUnakgMnY88PYPOGNl5UCDEQWErDkIIeQpvdM" />
   
 </head>
 <body>
